src/styles.css
/* You can add global styles to this file, and also import other style files */

html, body { height: 100%; overflow: hidden; }
body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }

#loginForm {
    margin-top: 1em;
}

#navbar {
    width: 100%;
    height: 40px;
    background-color: #00588e;
}

.button {
    background-color: #00588e;
    color: white;
}

.login-button {
    width: 225px;
}

.nav-button {
    z-index: 1;
}

.mat-typography p {
    margin: 0;
}

.nav-header {
    color: white;
    font-weight: 500;
    position: absolute;
    width: 100%;
    text-align: center;
}

.outlet {
    padding-top: 1em;
    height: calc(100% - 40px - 1em);
    overflow-y: scroll;
}

.main-page-wrapper {
    position: relative;
    margin-top: 2em;
}

.main-page-wrapper p {
    text-align: left;
}

.mat-form-field {
    width: 225px;
}

.element {
    background-color: #00588e;
    color: white;
    padding: 2em;
    margin-bottom: 2em;
}

.element h2 {
    margin: 0;
}

.element button {
    margin-top: 1em;
    margin-right: 1em;
}

.button-add.mat-flat-button {
    position: absolute;
    right: 0;
}

.content-title {
    position: absolute;
    left: 2em;
}

/* Extra small devices (phones, 600px and down) */
@media only screen and (max-width: 600px) {
    .element {
        width: 200px;
    }
}

@media only screen and (max-width: 800px) {
    .button-add.mat-flat-button {
        position: relative;
        margin-bottom: 1em;
    }
    
    .content-title {
        position: relative;
        left: 0;
    }
}

/* Small devices (portrait tablets and large phones, 600px and up) */
@media only screen and (min-width: 600px) {
    .element {
        width: 350px;
    }
}

/* Medium devices (landscape tablets, 800px and up) */
@media only screen and (min-width: 800px) {
    .element {
        width: 500px;
    }
}

.back-button {
    margin: 0;
}

.edit .mat-form-field-appearance-fill .mat-form-field-flex {
    background: white;
    color: black;
}

.edit .mat-form-field {
    width: 100%;
}

.mat-ff-wrap {
    width: 100%;
}

.back-button.mat-icon-button {
    margin-bottom: 8px;
}

.checkbox-group {
    margin-top: 1em;
}

.checkbox-item {
    margin-left: 1em;
}

.checkbox-item:first-child {
    margin-left: 0;
}

